Hey snapshots work, but they're a little too complicated right now
